--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,50 @@
-body{
-    background-color: rgba(242, 165, 49, 0.246);
-    text-align: center;
+body {
+    background-color: rgb(0, 0, 0);
 }
-h1{
-    color:rgba(14, 47, 214, 0.974);
-    font-size: 20px;
+.imgdead{
+    width: 1880px;
+    border:double 3px rgb(73, 1, 1); border-radius: 20px;
 }
-h1.titulo{
-    font-size: 40px;
-    text-align: left;
-    color:rgb(228, 14, 14);
+.imgdbd3{
+    width: auto;
+    border-radius: 15px; border: ridge 2px black;
+    float: right;
+    margin: 25px;
 }
-img{
-    border: 2px solid black;
+.imgjogos{
+    width: 350px;
+    size: 20px;
+    border-radius: 10px; border: black;
+    float: right;
+    margin: auto;
+}
+.imgdarksouls3{
+    width: 1880px;
+    border: ridge 2px rgb(0, 0, 0);
+}
+.imgbonfire{
+     width: 600px;
+    border-radius: 15px; border: ridge 2px black;
+    float: right;
+    margin: 25px;
+}
+.imgsilenthill{
+    width: 1880px;
+    border:double 3px rgb(20, 12, 12); border-radius: 20px;
+}
+.imgsilenthill2{
+     width: 400px;
     border-radius: 15px;
+    float: right;
+    margin: 25px;
 }
-img.i1{
-    width: 420px;
-    height: 300px; 
+.imgdarksouls{
+     width: 1880px;
+    border: 5px rgb(0, 0, 0);
 }
-img.i2{
-    width: 440px;
-    height: 300px;
-}
-img.i3{
-    width: 460px;
-    height: 300px;
-}
-img.i4{
-    width: 480px;
-    height: 300px;
-}
-
-.caixa{
-    border:solid 2px blue;
-    border-radius: 15px;
-    background-color: rgba(14, 214, 47, 0.253);
-    padding: 10px;
-    margin: 10px;
-    width: 250px;
-}
-.caixa2{
-    border: 2px solid black;
-    border-radius: 15px;
-    background-color: rgba(214, 14, 199, 0.253);
-    padding: 10px;
-    margin: 10px;
-    width: 250px;
-}
-.boxpasto{
-    padding: 10px;
-    margin: 10px;
-   align-items: center;
+.imgdarksouls1{
+    width: auto;
+    border-radius: 15px; border: ridge 2px black;
+    float: right;
+    margin: 25px;
 }
